--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,9 @@ jobs:
           pnpm install
           pnpm run build
 
+      - name: Add CNAME
+        run: echo 'repos.gapit.io' > dist/CNAME
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
