--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,17 +12,18 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Restore npm cache
-        uses: actions/cache@v2
+      - uses: pnpm/action-setup@v2.0.1
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          version: latest
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+          cache: "pnpm"
+      - run: pnpm install
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          npm install -g pnpm
           pnpm install
           pnpm run build
 
